# webgpu-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  test.md  utils.cmake
cmake/: imgui.cmake  utils.cmake
resources/shaders/: static_triangle.wgsl
src/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  color.h  globals.cpp  globals.h  implementations.cpp  input.h  main.cpp  shader.cpp  shader.h  terrain.cpp  terrain.h  terrain_renderer.cpp  terrain_renderer.h  types.h  window.cpp  window.h  world.cpp  world.h
src/noise/: noise.h
src/terrain/: Grid.h  HeightMap.h  Mesh.h  Noise.h
